[package]
name = "backdrop_blur"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iced.workspace = true
iced.features = ["debug", "canvas"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced.workspace = true
iced.features = ["webgl", "fira-sans", "canvas"]
console_error_panic_hook = "0.1"
