[package]
name = "gradient_border"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iced.workspace = true
iced.features = ["debug"]

tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced.workspace = true
iced.features = ["webgl", "fira-sans"]
console_error_panic_hook = "0.1"
